--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "job-finder",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "main": "src/seed.js",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -9,15 +11,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.6.0",
+    "dotenv": "^16.4.7",
+    "ioredis": "^5.6.0",
+    "mongoose": "^8.12.1",
+    "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.2"
+    "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4"
   }
 }
